CPD 3.5 instructions for other notebooks

--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -87,7 +87,7 @@
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
     "\n",
-    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-stremas\" ## Change this to Streams instance\n",
     "try:\n",
     "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
     "except TypeError:\n",
@@ -289,5 +289,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
