--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -428,12 +428,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
-    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "## 5. See job status \n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to My **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n",
-    "\n"
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
+    "\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n"
    ]
   },
   {
@@ -467,7 +474,12 @@
     "\n",
     "It is also possible to check the contents of the test table on Db2 console with the following command.\n",
     "\n",
-    "      db2 \"SELECT * FROM RUN_SAMPLE_DEMO\"\n"
+    "      db2 \"SELECT * FROM RUN_SAMPLE_DEMO\"\n",
+    "      \n",
+    " \n",
+    "### Next steps\n",
+    "\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles).\n"
    ]
   }
  ],
