--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -7,7 +7,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "cbaad98c-1dcd-4078-9981-1df90b477a4f"
+   },
    "source": [
     "# IBM Streams HBASE sample application\n",
     "This sample demonstrates creating a Streams Python application to connect to HBASE, perform some operations on a table, and viewing the results.\n",
@@ -43,7 +45,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f9fa3b2e-477e-4acd-a5d0-a8aba7895b98"
+   },
    "source": [
     "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
@@ -56,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "589df550-fada-40cc-bd5f-e245816fdfad"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -70,7 +76,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "745ddd9e-7155-4918-bce4-90f76791f818"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.hbase` package and verify the package version"
    ]
@@ -78,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "fd6e0767-e972-453b-bf58-4ac1883f2ab8"
+   },
    "outputs": [],
    "source": [
     "import streamsx.hbase as hb\n",
@@ -89,7 +99,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c645ebfc-8276-4436-a9d9-474571deda3e"
+   },
    "source": [
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to HBASE\n",
     "\n",
@@ -106,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "1e487901-0922-4310-a73d-5fb947b85bbc"
+   },
    "outputs": [],
    "source": [
     "connection_name = 'HBASE'"
@@ -115,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "04cc27dd-2023-40ad-abde-0584ef3c0e2e"
+   },
    "outputs": [],
    "source": [
     "hbase_connection=icpd_util.get_connection(connection_name, conn_class='external')\n",
@@ -124,7 +140,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "94a55c8f-6d0d-410e-8934-c3a02bd6f7e6"
+   },
    "source": [
     "## <a name=\"create\"> </a> 2. Create the application\n",
     "All Streams applications start with a Topology object, so start by creating one:\n"
@@ -133,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e704a224-b62a-437f-a04e-a1d5d1043cf1"
+   },
    "outputs": [],
    "source": [
     "#Imports\n",
@@ -150,7 +170,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ae5da593-00ee-484b-89c1-29853af46fa0"
+   },
    "source": [
     "\n",
     "### How to use the streamsx.hbase package\n",
@@ -162,18 +184,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "14d79e87-11f2-490e-bfc2-a9fe5de4b6c0"
+   },
    "source": [
     "## <a name=\"download\"> </a> 2.2. Download the latest version of streamsx.hbase toolkit\n",
     "If you want to work with the latest version of streamsx.hbase toolkit, it is possible to download the toolkit and add the hbase toolkit location to your topology. <br/>\n",
-    "The list of releases of streamsx.hdfs are in github: <br/>\n",
-    "    \"https://github.com/IBMStreams/streamsx.hbase/releases\"\n"
+    "The list of releases of [streamsx.hdfs are on GitHub](https://github.com/IBMStreams/streamsx.hbase/releases).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8c0f02c8-3939-4802-b1e3-1579a33a0581"
+   },
    "outputs": [],
    "source": [
     "#hbase_toolkit_location = hbase.download_toolkit()\n",
@@ -182,7 +207,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "b82e8a69-1878-41a7-aead-686c7664acdb"
+   },
    "source": [
     "## <a name=\"insert\"> </a> 2.3. Insert streaming data into the table\n",
     "\n",
@@ -199,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "44990679-149a-4189-a647-f3dc4c34e631"
+   },
    "outputs": [],
    "source": [
     "table_name = 'streamsSample_lotr'"
@@ -207,7 +236,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0a73dbb9-d31f-42ac-b931-fbde05184e5d"
+   },
    "source": [
     "In the first step we put some rows into HBASE table. <br/>\n",
     "The function `_create_stream_for_put` creates a stream that contains 10 rows. <br/> \n",
@@ -217,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "6d5ba059-b6b3-4247-a25a-4ac8064f59f7"
+   },
    "outputs": [],
    "source": [
     "def _create_stream_for_put(topo):\n",
@@ -232,9 +265,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "df9ac8d1-53ff-4ed9-859b-a398829132df"
+   },
    "source": [
-    "## <a name=\"get\"> </a> 2.4. get data from the table\n",
+    "## <a name=\"get\"> </a> 2.4. Get data from the table\n",
     "Now we get rows from the table. <br/>\n",
     "The function `_create_query_stream_for_get` creates a stream that contains queries. <br/>\n",
     "The function `hbase.get` gets `getStrem` as input stream and returns selected rows. <br/>\n",
@@ -244,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "6283fb9d-552d-4049-b2a2-bbd0cf9e07e9"
+   },
    "outputs": [],
    "source": [
     "def _create_query_stream_for_get(topo):\n",
@@ -259,9 +296,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "32880047-2624-4679-913b-8e138ee093c0"
+   },
    "source": [
-    "## <a name=\"scan\"> </a> 2.5. scan all rows from the table\n",
+    "## <a name=\"scan\"> </a> 2.5. Scan all rows from the table\n",
     "In the next step we scan all rows from the table.<br/>\n",
     "The function `hbase.scan` returns all rows from the HBASE table.<br/>\n",
     "This parameter `init_delay` specifies the time to wait in seconds before the operator scans the rows. <br/>\n",
@@ -271,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "6c85e467-98d5-4463-9a09-0f16a54c3c38"
+   },
    "outputs": [],
    "source": [
     "scanned_rows = hbase.scan(topo, table_name=table_name, max_versions=0 , init_delay=10, connection=hbase_connection, name=\"HbaseScan\")\n",
@@ -284,7 +325,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "d0641f0d-57b7-420e-b11f-cb8e39162549"
+   },
    "source": [
     "# <a name=\"submit\"> </a> 3. Submit the application\n",
     "\n",
@@ -294,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "faae51c8-2497-4f13-b783-800d104bd2ef"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -312,7 +357,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "fde1c19a-22fe-44c1-8350-cdd931ce74ee"
+   },
    "source": [
     "# <a name=\"view\"> </a> 4. View data from the table\n",
     "Now that the job is started, use the View object you have already created to start retrieving rows from a HBASE table."
@@ -321,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "533f2961-8e64-43af-be34-8ce63e07620d"
+   },
    "outputs": [],
    "source": [
     "# Connect to the view and display the selected data\n",
@@ -335,18 +384,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0b8c85b5-50a9-453a-b04e-6c85fea96099"
+   },
    "source": [
     "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
-    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed in section 3](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "adab9f83-f517-4cf5-b4c4-bc96f8f2b4d4"
+   },
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
@@ -356,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "40d42470-1d90-44d0-9a3d-eb304ab2e219"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -365,10 +427,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4a598164-14d3-4568-90db-f42eea05aa47"
+   },
    "source": [
     "## Summary\n",
-    "In this sample we created an HBASE application which connects to the Hadoop server, insetrted some rows into HBASE table and get the rows from the table.\n",
+    "In this sample, we created an HBASE application which connects to the Hadoop server, insetrted some rows into HBASE table and get the rows from the table.\n",
     "\n",
     "After submitting the application to the Streams service, we checked the application logs to see the progress.\n",
     "\n",
@@ -379,7 +443,9 @@
     "scan 'streamsSample_lotr'\n",
     "```\n",
     "  \n",
-    "\n"
+    "\n",
+    "### Next steps\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles).\n"
    ]
   }
  ],
