--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -7,7 +7,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f6d96421-8e37-4d22-ac8a-81b9c5b9e6b6"
+   },
    "source": [
     "# IBM Streams HDFS sample application\n",
     "This sample demonstrates creating a Streams Python application to connect to HDFS, perform some file operations on a HDFS, and viewing the results.\n",
@@ -45,7 +47,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5c1cf4b9-eefd-45c2-b291-0ed90b02da3b"
+   },
    "source": [
     "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
@@ -58,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "70cdf0fb-ddaa-4cbb-8d33-d6ad41dfa72a"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -72,7 +78,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "e2f65432-6a8c-4e11-ac96-9f0d3208e124"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.hdfs` package and verify the package version"
    ]
@@ -80,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "2adde38b-d337-4dcc-b95a-f547b611c875"
+   },
    "outputs": [],
    "source": [
     "#!pip install streamsx\n",
@@ -94,7 +104,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7cb1a3b6-72d9-41ca-a855-6d683a2b6bdc"
+   },
    "source": [
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to HDFS\n",
     "\n",
@@ -125,7 +137,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "8540ed68-b0d3-4e7e-ba60-65204379356d"
+   },
    "source": [
     "There are 2 options to put the HDFS credentials:\n",
     "\n",
@@ -135,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "7a3710f7-0f99-4d4e-a8b3-84a309ad7573"
+   },
    "outputs": [],
    "source": [
     "import getpass\n",
@@ -145,7 +161,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f1535bff-50a9-493d-a6ef-057f617a7427"
+   },
    "source": [
     "2- Perform the steps [Connecting to data source](https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/cpd/access/connect-data-sources.html)\n",
     "and create an external configuration from type `GenericWebHDFS` and put the connection name in the next step.\n"
@@ -154,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "a2728aeb-b249-451e-a7b5-a5c1d0f8f205"
+   },
    "outputs": [],
    "source": [
     "connection_name = 'WebHDFS'\n",
@@ -164,7 +184,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a4ec0c87-eb2b-48ef-9c64-d909cf56ba67"
+   },
    "source": [
     "## <a name=\"create\"> </a> 2. Create the Topology\n",
     "All Streams applications start with a Topology object, so start by creating one topology (topo). <br/>\n",
@@ -174,7 +196,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0d7e1f93-fc15-40c4-bd6b-8a03d965074b"
+   },
    "outputs": [],
    "source": [
     "#Imports\n",
@@ -191,7 +215,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3b4d7555-760b-488b-bb18-f83d5d676d89"
+   },
    "source": [
     "## <a name=\"download\"> </a> 2.1. Download the latest version of streamsx.hdfs\n",
     "If you want to work with the latest version of streamsx.hdfs toolkit, it is possible to download the toolkit and add the hdfs toolkit location to your topology.<br/>\n",
@@ -202,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b7ffeb13-1505-4932-9962-dfce2e9e26fc"
+   },
    "outputs": [],
    "source": [
     "#hdfs_toolkit_location = hdfs.download_toolkit()\n",
@@ -211,7 +239,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "8dd8a844-6dc4-4284-9112-4460365d6f5f"
+   },
    "source": [
     "\n",
     "### How to use the streamsx.hdfs package\n",
@@ -223,7 +253,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0bffb3aa-dbb5-4f2e-a45e-d05837979dc8"
+   },
    "source": [
     "## <a name=\"sink\"> </a> 2.2. Sink streaming data in a HDFS file\n",
     "\n",
@@ -250,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "d6eb207f-ed0a-49ee-95eb-c19ad5606e04"
+   },
    "outputs": [],
    "source": [
     "dir_name = 'pytest'\n",
@@ -263,7 +297,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a6a94ac7-d819-43fc-a962-15ae5702164c"
+   },
    "source": [
     "## <a name=\"dynamic_file_sink\"> </a> 2.3. Sink streaming data with dynamic file names into HDFS\n",
     "In the next step we write some lines in several files (dynamic file names)."
@@ -272,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b0574564-962a-47e6-be65-8d84163889cd"
+   },
    "outputs": [],
    "source": [
     "# create dynamic file names\n",
@@ -299,7 +337,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "e03e8063-b7e6-4b2b-a813-2a51b1775e2b"
+   },
    "source": [
     "## <a name=\"scan\"> </a> 2.4. Scan all lines from the HDFS file\n",
     "In the next step we scan all files from a HDFS directory.<br/>\n",
@@ -313,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "3c8e39cf-34b7-472e-83ff-2f278a4f5cc2"
+   },
    "outputs": [],
    "source": [
     "# scans an HDFS directory and return all txt file names that begins with sample (HDFS2DirectoryScan)\n",
@@ -325,7 +367,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "993a3d83-dbcf-4cf2-9442-5e585ad32b2a"
+   },
    "source": [
     "## <a name=\"get\"> </a> 2.5. Read lines from the HDFS file\n",
     "Now we read lines from files. <br/>\n",
@@ -336,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "54db7a1a-fbb7-40f2-8071-695dd019d39e"
+   },
    "outputs": [],
    "source": [
     "# reads lines from a HDFS file (HDFS2FileSource)\n",
@@ -348,7 +394,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0e25102d-c790-4ac5-b547-b31d1d2bead2"
+   },
    "source": [
     "## <a name=\"create_view\"> </a> 2.6. Create view to show lines from HDFS files."
    ]
@@ -356,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "2c14a820-e3aa-4e6f-ba97-5e843621c443"
+   },
    "outputs": [],
    "source": [
     "# create a view to retrieve lines from a file\n",
@@ -365,7 +415,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3a1d758c-c55a-404d-9f3c-d11974572e07"
+   },
    "source": [
     "# <a name=\"submit\"> </a> 3. Submit the application\n",
     "\n",
@@ -375,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "97fd9b7c-89be-4a8c-80a4-9dee68727857"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -393,7 +447,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f1b43aa8-85b9-42ca-8ad1-105ddcaf66a0"
+   },
    "source": [
     "# <a name=\"view\"> </a> 4. View lines from files\n",
     "Now that the job is started, use the View object you have already created to start retrieving lines from HDFS files."
@@ -402,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "05e9e323-afff-43bd-aee5-f3bc4f0f876c"
+   },
    "outputs": [],
    "source": [
     "# Connect to the view and display the lines from HDFS files\n",
@@ -416,18 +474,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c571a194-7a9a-43b5-9f68-e0a6081188df"
+   },
    "source": [
     "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
-    "You can view job status and logs by going to `Projects > Jobs`. Find your job based on the name printed above. Retrieve job logs using the `Download logs` action from the job's context menu.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed in section 3](#submit). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9bc5a2f5-e44f-4251-abc3-2a69f0c5aa60"
+   },
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
@@ -437,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "820d8117-45ec-459d-a59f-8c953980632f"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -446,7 +517,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5b80e51e-8198-4de1-8be1-f5c4e77ffe4a"
+   },
    "source": [
     "## Summary\n",
     "In this sample we created an HDFS application which connects to the Hadoop server, inserted some lines in HDFS files and scans a HDFS directory and reads the lines from HDFS files.\n",
@@ -464,6 +537,10 @@
     "```\n",
     "hadoop fs -rm /user/clsadmin/pytest/*.*\n",
     "```\n",
+    "\n",
+    "\n",
+    "### Next steps\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles).\n",
     "\n"
    ]
   }
