--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -8,7 +8,8 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "id": "63860bec-cc52-48ad-947e-6b9fe4c4dc0f"
    },
    "source": [
     "# IBM Streams basic Kafka sample application\n",
@@ -64,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "903713ff-1753-408f-9358-0d773cc40d10"
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -82,7 +85,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3c00b238-4778-443e-8bef-b2b71552d451"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.kafka` package and verify the package version"
    ]
@@ -90,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "29474821-6cdf-4064-86e1-972dcde30246"
+   },
    "outputs": [],
    "source": [
     "import streamsx.kafka as kafka\n",
@@ -101,7 +108,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "91d10046-0090-4c8c-a985-9448a8b87d64"
+   },
    "source": [
     "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
@@ -175,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f5ca91d5-2524-4ecb-b063-1c0224ae0a02"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -190,7 +201,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ea39a375-c47d-45d6-a4c5-80c18a07d0da"
+   },
    "source": [
     "## 2.1 Create the consumer properties from your connection details\n",
     "\n",
@@ -210,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "d8600b69-2f5e-4672-b0df-ba874db18495"
+   },
    "outputs": [],
    "source": [
     "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
@@ -246,7 +261,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "fe95bbf0-2752-46f0-ba72-788ec491060e"
+   },
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    <b>Warning:</b>\n",
@@ -278,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0d1aafca-bf99-4955-9c21-6c70a156cb38"
+   },
    "outputs": [],
    "source": [
     "from streamsx.kafka import KafkaConsumer\n",
@@ -293,7 +312,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1caae5de-0ac0-434a-98ae-f3b5c3432ec6"
+   },
    "source": [
     "<a name=\"create_view\"></a>\n",
     "## 2.3 Create a `View` to preview the received tuples on the `Stream` \n",
@@ -304,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "3af883ae-d579-4222-b49a-5e030e67d7fd"
+   },
    "outputs": [],
    "source": [
     "streamView = received.as_string().view(name=\"ReceivedSensorData\",\n",
@@ -313,7 +336,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c1f63729-77a1-40df-bbd8-bd68148d16c1"
+   },
    "source": [
     "## 2.5 Define output\n",
     "\n",
@@ -325,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "d2a6d974-4658-4c9e-aa04-fdfaacf89b13"
+   },
    "outputs": [],
    "source": [
     "# publish results as Strings\n",
@@ -341,7 +368,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c53f6ad7-8a02-4300-aeb2-bf922449552d"
+   },
    "source": [
     "<a id=\"create_2\"></a>\n",
     "# 3. Create a simple producer application\n",
@@ -354,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "cd99f6c8-7606-42db-8e6d-762aa77129ba"
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -399,7 +430,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "70ace542-fb8c-407c-93a7-8168dffa5ae2"
+   },
    "source": [
     "## 3.2 Publish the data to the Kafka topic\n",
     "\n",
@@ -417,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "c99f86fe-21b5-4ec4-bc87-3d6221c0515c"
+   },
    "outputs": [],
    "source": [
     "from streamsx.kafka import KafkaProducer\n",
@@ -446,7 +481,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c5e2699a-a921-4c3f-8716-fea68b7cf96e"
+   },
    "source": [
     "<a id=\"launch\"></a>\n",
     "# 4. Submit both applications to the Streams instance\n",
@@ -456,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "4fdea913-5649-481b-ae86-76163ab8b532"
+   },
    "outputs": [],
    "source": [
     "# disable SSL certificate verification if necessary\n",
@@ -472,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "32bfb7ad-849e-41b8-a218-f26a082d0601"
+   },
    "outputs": [],
    "source": [
     "# submit producer topology as a Streams job\n",
@@ -484,7 +525,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ba8c5472-9918-4755-979d-56cbe77dbe3b"
+   },
    "source": [
     "<a name=\"view\"></a>\n",
     "# 5. Use a `View` to access data from the job\n",
@@ -494,7 +537,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8f32e5f9-495d-4233-8aa2-1b7e6c9075b3"
+   },
    "outputs": [],
    "source": [
     "# connect to the view and display 30 samples of the data\n",
@@ -508,7 +553,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4fef1605-f495-4fac-9371-86e801ce1c10"
+   },
    "source": [
     "## 5.1 Display the results in real time\n",
     "Calling `View.display()` from the notebook displays the results of the view in a table that is updated in real-time."
@@ -517,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "07dc1a12-af0b-4e22-a5a0-2c2b2c68d759"
+   },
    "outputs": [],
    "source": [
     "# display the results for 60 seconds\n",
@@ -526,16 +575,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aac1f2ac-d620-46a5-af8e-d8b0a22b91ea"
+   },
    "source": [
     "\n",
-    "## 4.2 See job status \n",
+    "## 5.2 See job status \n",
     "\n",
-    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the name printed above.\n",
-    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n",
     "<a name=\"cancel\"></a>\n",
     "\n",
     "# 6. Cancel the jobs\n",
@@ -546,7 +603,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "495addbf-193b-4dd2-ac8b-1ee9676518f6"
+   },
    "outputs": [],
    "source": [
     "# stop the view's background data fetch in case the 60 seconds display duration are not yet over\n",
@@ -559,13 +618,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a1da3206-437b-4385-b762-66a9a668adb0"
+   },
    "source": [
-    "# 7. Congratulation\n",
+    "# 7. Summary\n",
     "\n",
-    "You created a Streams application that connected to a Kafka cluster with a consumer group for load sharing and managed to connect to a Kafka cluster with potentially non-trivial connection settings. Finally you sampled the received data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe Streams internally to it.\n",
-    "\n",
-    "Not to forget, to bring the application to life, you also created a simple producer application, which published artificial sensor data to the Kafka topic."
+    "In this notebook, you:\n",
+    " - Created a Streams application that connected to a Kafka cluster with a consumer group for load sharing. \n",
+    " - Connected to a Kafka cluster with potentially non-trivial connection settings. \n",
+    " - Sampled the received data by using a view.\n",
+    " - Published the data within the Streams instance, so that other Streams applications in the instance can subscribe Streams internally to it.\n",
+    " - Created a simple producer application, which published artificial sensor data to the Kafka topic.\n",
+    " \n",
+    " \n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles)."
    ]
   }
  ],
