--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -8,7 +8,8 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "id": "5255097d-c8a3-4f3e-9e92-838bcfc8f198"
    },
    "source": [
     "# IBM Streams Kafka sample application\n",
@@ -64,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "99c47aa4-31ca-462a-b651-6091c1a7ef7d"
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -82,7 +85,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3d8d10da-1a81-428f-b359-0292aa6c2d10"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.kafka` package and verify the package version"
    ]
@@ -90,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "d920593b-4c8e-4d81-905d-ca1a3a1ed667"
+   },
    "outputs": [],
    "source": [
     "import streamsx.kafka as kafka\n",
@@ -105,7 +112,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4a0b5ec3-3bfa-466b-8122-37be60f507c6"
+   },
    "source": [
     "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
@@ -179,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "752ceaee-c992-4dd0-98f7-2a82c1a1ba8c"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -194,7 +205,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9e0f2f00-6f6f-44c9-b74a-837888ec0865"
+   },
    "source": [
     "## 2.1 Create the consumer properties from your connection details\n",
     "\n",
@@ -214,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b0b26969-e9e8-4e66-8033-18225cdb5087"
+   },
    "outputs": [],
    "source": [
     "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
@@ -251,7 +266,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9ac756df-2478-4c2e-bc15-f26250ad0f75"
+   },
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    <b>Warning:</b>\n",
@@ -283,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e57e27c9-b1f6-4091-8f06-155847dd429d"
+   },
    "outputs": [],
    "source": [
     "from streamsx.kafka import KafkaConsumer\n",
@@ -298,7 +317,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "282ae3c3-3285-4af1-93cd-7196b4b75b7f"
+   },
    "source": [
     "## 2.3 Parallelize message processing with schema transform\n",
     "\n",
@@ -308,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "59f58209-5778-4402-b88f-0235e335286a"
+   },
    "outputs": [],
    "source": [
     "# start another parallel region partitioned by message key,\n",
@@ -321,7 +344,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a2aa1ff2-204c-44ca-aed3-cc7fab1ee09e"
+   },
    "source": [
     "Define a new schema by extending `typing.NamedTuple` and a function that parses the JSON of the messages and maps a couple of attributes of `Schema.StringMessageMeta` to the new schema."
    ]
@@ -329,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "710d9d4b-6d4a-4de5-8b14-f74a279066ad"
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -381,7 +408,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6f07e3b7-8422-4b26-9ccd-ad94861ddfb8"
+   },
    "source": [
     "<a name=\"create_view\"></a>\n",
     "## 2.4 Create a `View` to preview the tuples on the `Stream` \n",
@@ -392,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "9a5fcd08-67f6-4d2e-8ef5-5fce512bc27f"
+   },
    "outputs": [],
    "source": [
     "streamView = parallelEnd.view(name=\"ValidatedSensorData\",\n",
@@ -401,7 +432,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9e9cce42-86da-4eb0-aac9-48248e17290f"
+   },
    "source": [
     "## 2.5 Define output\n",
     "\n",
@@ -413,7 +446,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "29ea362a-e55d-4f1a-813b-61d22994df9b"
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -430,7 +465,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3a19e9ab-46a2-4313-97cd-b24b68ee0d6a"
+   },
    "source": [
     "<a id=\"create_2\"></a>\n",
     "# 3. Create a simple producer application\n",
@@ -443,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "fc82a90a-7ab8-46c9-b3cd-06a21925f616"
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -488,7 +527,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "cf08a9a1-722c-45db-9132-b4e3ff2c7300"
+   },
    "source": [
     "## 3.2 Publish the data to the Kafka topic\n",
     "\n",
@@ -507,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "639a2a9e-2ec3-4689-ab3e-2be875f6cddb"
+   },
    "outputs": [],
    "source": [
     "from streamsx.kafka import KafkaProducer\n",
@@ -534,7 +577,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "09c9d607-0151-41f1-b0d6-e7c3d5d9bb20"
+   },
    "source": [
     "<a id=\"launch\"></a>\n",
     "# 4. Submit both applications to the Streams instance\n",
@@ -545,6 +590,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "02c8a718-9eb9-43c1-b4d6-d2733b005824",
     "scrolled": true
    },
    "outputs": [],
@@ -562,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "cccd5ce6-44bf-4983-ad1f-b41f13d25d3c"
+   },
    "outputs": [],
    "source": [
     "# submit producer topology as a Streams job\n",
@@ -574,7 +622,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5c8ed7b4-7d44-4cd8-ac3a-12e6378cde31"
+   },
    "source": [
     "<a name=\"view\"></a>\n",
     "# 5. Use a `View` to access data from the job\n",
@@ -584,7 +634,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "12274edf-cb8a-4adc-894d-17a81daea728"
+   },
    "outputs": [],
    "source": [
     "# connect to the view and display 20 samples of the data\n",
@@ -598,7 +650,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "09746b5c-e529-457f-a84b-8abee2d26135"
+   },
    "source": [
     "## 5.1 Display the results in real time\n",
     "Calling `View.display()` from the notebook displays the results of the view in a table that is updated in real-time."
@@ -607,7 +661,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "92de2ca6-9904-4714-89fb-a49c7bc8d659"
+   },
    "outputs": [],
    "source": [
     "# display the results for 60 seconds\n",
@@ -616,16 +672,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "cdcb0594-18a8-4434-abfa-0d18f2f5f679"
+   },
    "source": [
     "\n",
-    "## 4.2 See job status \n",
+    "## 5.2 See job status \n",
     "\n",
-    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the name printed above.\n",
-    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n",
     "<a name=\"cancel\"></a>\n",
     "\n",
     "# 6. Cancel the jobs\n",
@@ -649,13 +713,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "03312172-ad86-4de4-8b9c-c7bdf8759d6a"
+   },
    "source": [
-    "# 7. Congratulation\n",
+    "# 7. Summary\n",
     "\n",
-    "You created a non-trivial Streams application that connected to a Kafka cluster with a consumer group for load sharing. Then you parallelized the processing of the fetched messages in a way that the keys of the messages were pinned to the parallel channels. Finally you sampled the processed data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe to it.\n",
-    "\n",
-    "Not to forget, to bring the application to life, you also created a simple producer application, which published artificial sensor data to the Kafka topic."
+    "Congratulations! By completing this notebook, you:\n",
+    " - Created a non-trivial Streams application that connected to a Kafka cluster with a consumer group for load sharing. \n",
+    " - Parallelized the processing of the fetched messages in a way that the keys of the messages were pinned to the parallel channels. \n",
+    " - Sampled the processed data by using a View.\n",
+    " - Published the data within the Streams instance, so that other Streams applications in the instance can subscribe to it.\n",
+    " - Created a simple producer application, which published artificial sensor data to the Kafka topic.\n",
+    " \n",
+    " \n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles)."
    ]
   }
  ],
