--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -8,7 +8,7 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "id": "8c9753f6-7c69-4c91-9349-d344731cefff"
    },
    "source": [
     "# IBM Streams PMML scoring sample application\n",
@@ -81,7 +81,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0c029913-a031-4e5a-828b-48cba2744f9d"
+   },
    "source": [
     "\n",
     "<a id=\"setup\"></a>\n",
@@ -117,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "2fc306d9-cffa-4a2e-b6d6-8bc5d39d5a77"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -131,7 +135,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6c26e9f1-477c-45d2-9d56-8409f65d00f0"
+   },
    "source": [
     "<a id=\"setupPackages\"></a>\n",
     "\n",
@@ -141,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b8f47aba-a1f8-430d-b182-dd1498822c46"
+   },
    "outputs": [],
    "source": [
     "# show the installed versions of both packages\n",
@@ -161,7 +169,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ec364b86-ffbe-4716-9d76-798cae5a7be3"
+   },
    "source": [
     "<a id=\"setupDataModel\"></a>\n",
     "\n",
@@ -183,7 +193,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f564913d-d297-4a0f-a34f-fa7ced571800"
+   },
    "source": [
     "<a id=\"create\"></a>\n",
     "\n",
@@ -196,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "37a8085e-d5a6-49c1-aa4c-ca761e59881c"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -211,7 +225,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "680238c2-1bdb-40c3-a5ed-af0fee22db79"
+   },
    "source": [
     "<a id=\"defineInput\"></a>\n",
     "\n",
@@ -223,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0a933f43-b8c2-4747-a85d-c3283a336160"
+   },
    "outputs": [],
    "source": [
     "sample_data = '/project_data/data_asset/Drug_dataset.csv'\n",
@@ -232,7 +250,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2e8cae1c-839e-4a01-b44b-abb9e6dbd1db"
+   },
    "source": [
     "We will use this CSV file as data source for this sample. To simulate an endless stream of data we will read the file repeatedly and submit each line in the file as a tuple. The class below reads the data set and produces a stream of Python `dict` objects which also include 2 additional fields, `NA_to_K` and the prediction result `Drug`. The produced `Stream` is a stream of Python `dict`."
    ]
@@ -240,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "52910804-2727-4174-8eab-0ae698d08c4c"
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -281,7 +303,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1a1a0459-6ed1-4a98-a7d5-1fb209ff378f"
+   },
    "source": [
     "<a id=\"analyzeData\"></a>\n",
     "## 2.2 Analyze and score data\n",
@@ -314,7 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "42be6766-1ac7-4859-9f51-6ddbfea470de"
+   },
    "outputs": [],
    "source": [
     "# class providing a callable that calculates the NA / K ratio expected by the model\n",
@@ -326,7 +352,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "d74172b4-f753-4e48-bf3a-7328e86747d7"
+   },
    "source": [
     "Second, our input is a stream of Python `dict` objects, but  the `pmml.score()` function requires an input stream with a  [structured schema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema).\n",
     "In the cell below we first define the structured schema, and then:\n",
@@ -339,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "92d30b3e-dca9-4357-a586-5ab79c64c5ca"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.schema import StreamSchema\n",
@@ -369,7 +399,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "efe9bee4-2c8c-41a2-b5bf-8c70b71d3259"
+   },
    "source": [
     "<a id=\"scoreData\"></a>\n",
     "### 2.2.2 Score data\n",
@@ -397,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "c3cd497f-dd0e-4222-a743-081cc5c02e8c"
+   },
    "outputs": [],
    "source": [
     "score = pmml.score(preprocess,\n",
@@ -410,7 +444,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7e2449ba-1cec-4a4f-bc29-af7194b7f396"
+   },
    "source": [
     "<a id=\"defineOutput\"></a>\n",
     "## 2.3 Define Output\n",
@@ -424,7 +460,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "5ad0149b-401b-478b-ae25-43e68eb2f3b4"
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -439,7 +477,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "34c590b8-5229-478e-8932-fc8c9ba3b752"
+   },
    "source": [
     "<b>Create a `View` to preview the tuples on the result `Stream` </b>\n",
     "\n",
@@ -450,7 +490,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "1ea9885b-f48e-47c8-b685-52e5a5acc39d"
+   },
    "outputs": [],
    "source": [
     "score_view = score.view(name=\"ScoredRecords\", description=\"Sample of scored records\")"
@@ -458,7 +500,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6ed56f1a-339c-4e8d-918a-cb67335de0da"
+   },
    "source": [
     "<a name=\"submit\"></a>\n",
     "\n",
@@ -469,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8bddaf5e-1b5c-4ff0-b877-22619f52348c"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -491,7 +537,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5eed46ee-3b5f-4735-a26e-65886e07e87f"
+   },
    "source": [
     "<a name=\"view\"></a>\n",
     "\n",
@@ -504,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "baff689c-9c23-43cf-9b15-9cef26d78d87"
+   },
    "outputs": [],
    "source": [
     "# Connect to the view and display the data\n",
@@ -518,7 +568,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c6ea01de-69d1-4fa3-9207-7e894ab01214"
+   },
    "source": [
     "<b> Display the results in real time</b>  \n",
     "\n",
@@ -529,6 +581,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "385151c5-b30d-4116-a074-34dd19717e86",
     "scrolled": true
    },
    "outputs": [],
@@ -539,19 +592,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "e09cdcb3-4141-4f3c-8d3b-12b9d2e69da7"
+   },
    "source": [
-    "<b> See job status </b>  \n",
+    "# <a name=\"status\"> </a> 4.1. See job status\n",
     "\n",
-    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the name printed above.\n",
-    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#submit). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3aef4680-4a41-482b-b333-c7d2df32893b"
+   },
    "source": [
     "<a name=\"cancel\"></a>\n",
     "\n",
@@ -560,7 +623,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c1bfa5f5-f3c9-4c9a-8245-aa4074610768"
+   },
    "source": [
     "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
@@ -568,7 +633,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "060a6234-14c7-45e3-b095-2eb27512be32"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -577,13 +644,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "8dbcfab8-1b6e-478d-a94d-3de89d4effe5"
+   },
    "source": [
     "# Summary\n",
     "\n",
     "We started with a `Stream` called `records`, which contained the data we wanted to analyze. Next, we used functions in the `Stream` object to perform simple preprocessing before we scored the data with a ML model and produced the `score` stream.\n",
     "\n",
-    "After submitting the application to the Streams service, we connected to the `score_view` view to see the results within the notebook."
+    "After submitting the application to the Streams service, we connected to the `score_view` view to see the results within the notebook.\n",
+    "\n",
+    "\n",
+    "### Next steps\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles).\n"
    ]
   }
  ],
@@ -608,5 +681,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
