--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -8,7 +8,8 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "id": "df750bb3-5737-4560-83bb-a6fe6a08ad8a"
    },
    "source": [
     "# IBM Streams SPL Toolkits tutorial\n",
@@ -60,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "4f444ef6-732f-4f40-93a0-19d13f76abfb"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -73,7 +76,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "33315933-00bf-49b8-9a03-c1333084614d"
+   },
    "source": [
     "   ### 1.2 Import  the `streamsx.toolkits` package and verify the package version"
    ]
@@ -81,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "55026542-8cbf-4ac1-9988-f1b5ad53fdff"
+   },
    "outputs": [],
    "source": [
     "import streamsx.toolkits as tkutils\n",
@@ -90,14 +97,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4c7547f7-6d7f-4a88-9bae-62fd8cdcf2f3"
+   },
    "source": [
     "## <a name=\"discoverpypi\"> </a> 2. Discover Python packages"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "17fdbb88-e838-48c1-886d-a319917498b9"
+   },
    "source": [
     "### 2.1 Discover installed Python packages"
    ]
@@ -105,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e8b539c4-d181-44d9-a369-e386cb9ad2cf"
+   },
    "outputs": [],
    "source": [
     "installed_packages = tkutils.get_installed_packages()\n",
@@ -114,7 +127,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ed2a60cf-4ccb-479b-b61f-942fd18ff2d5"
+   },
    "source": [
     "### 2.2 Discover latest version of Python packages on pypi.org"
    ]
@@ -122,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "76317db6-7bd0-4062-927f-03529dd42b7d"
+   },
    "outputs": [],
    "source": [
     "pypi_packages = tkutils.get_pypi_packages()\n",
@@ -131,7 +148,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "791968d5-4136-41de-986a-dfb4a11b3511"
+   },
    "source": [
     "### 2.3 Check for updates of Python packages"
    ]
@@ -139,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "3c03c32c-590a-4ca2-a9c4-f9196b04976c"
+   },
    "outputs": [],
    "source": [
     "from colorama import Fore, Back, Style\n",
@@ -155,7 +176,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0d046249-02e0-4747-aab0-e191bfd2d087"
+   },
    "source": [
     "### 2.4 Optional: Upgrade the Python package\n",
     "\n",
@@ -166,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "5910da20-416d-42e9-97ac-7969f2f563ed"
+   },
    "outputs": [],
    "source": [
     "#import sys\n",
@@ -175,14 +200,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "39b7fe19-7579-451d-88df-cfc362409c0c"
+   },
    "source": [
     "## <a name=\"discovertoolkits\"> </a> 3. Discover Toolkits"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6da7ccba-c64c-4a5c-a3e1-c4b36a1d8793"
+   },
    "source": [
     "### 3.1 Retrieve a list of toolkits available on the Streams build service\n",
     "\n",
@@ -192,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "96a550e4-1569-4092-8155-33149927eaaf"
+   },
    "outputs": [],
    "source": [
     "build_service_toolkits = tkutils.get_build_service_toolkits(cfg)\n",
@@ -201,7 +232,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "8f070348-bffd-4124-b199-7188570519d0"
+   },
    "source": [
     "### 3.2 Retrieve a list of product toolkits on GitHub"
    ]
@@ -209,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "21642b5b-6855-4c78-8644-db23cdf69b78"
+   },
    "outputs": [],
    "source": [
     "github_toolkits = tkutils.get_github_toolkits()\n",
@@ -218,7 +253,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "440867e3-7362-4f51-80d9-d62836cf556f"
+   },
    "source": [
     "### 3.3 Check for toolkit updates"
    ]
@@ -226,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "78f06b35-1ac0-4305-9db2-d5f428a4f740"
+   },
    "outputs": [],
    "source": [
     "from colorama import Fore, Back, Style\n",
@@ -242,7 +281,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9ac71d75-92bc-496a-9bfa-3eaaa033a3cf"
+   },
    "source": [
     "In order to use a newer version of a toolkit, you can download the toolkit from GitHub with the function\n",
     "`streamsx.toolkits.download_toolkit()` described here: https://streamsxtoolkits.readthedocs.io/en/latest/\n",
@@ -252,7 +293,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "e7fba40d-5312-4112-b9ba-5641482e234c"
+   },
    "source": [
     "## <a name=\"ghtksample\"> </a> 4. Launch SPL main composite\n",
     "\n",
@@ -267,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b391a37c-9997-4512-a14a-0702344fc123"
+   },
    "outputs": [],
    "source": [
     "nlp_tk = tkutils.download_toolkit('com.ibm.streamsx.nlp')"
@@ -275,7 +320,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c69423a0-b26c-4e0e-86bb-c70359079541"
+   },
    "source": [
     "Download samples directory from repository"
    ]
@@ -283,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "73a83ddb-6b33-453b-bf7d-91db4a65ff06"
+   },
    "outputs": [],
    "source": [
     "nlp_samples = tkutils.download_toolkit('samples', repository_name='streamsx.nlp')"
@@ -291,7 +340,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0b05f1dd-9e06-4c62-994c-cf8be4499b25"
+   },
    "source": [
     "List the samples directory"
    ]
@@ -299,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "2842554d-8b88-4496-a04a-e9b154f993cd"
+   },
    "outputs": [],
    "source": [
     "!ls $nlp_samples"
@@ -307,7 +360,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3c5a8db9-ff16-44aa-b51e-1ba05c8a8edd"
+   },
    "source": [
     "### 4.2 Select the sample application\n",
     "**Hint:** The main composite must be defined as `public composite <composite name>` to be used as a topology."
@@ -316,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "bc34edcc-8a17-4df0-b365-f8ed297548d8"
+   },
    "outputs": [],
    "source": [
     "sample_app = nlp_samples + '/LemmatizerSample'\n",
@@ -331,8 +388,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "adda16c7-85e6-422f-b22d-98645cdae5e1"
+   },
    "source": [
+    "<a name=\"submit\"></a>\n",
     "### 4.3. Submit the application\n",
     "\n",
     "A running Streams application is called a *job*. This next cell submits the application for execution and prints the resulting job id."
@@ -341,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b20b10c3-de39-4f78-821f-f33ca6df7de2"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -354,23 +416,34 @@
     "                                   config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
-    "    print(\"JobId: \", submission_result.job.id , \"Name: \", submission_result.job.name)"
+    "    print(\"Job Id: \", submission_result.job.id , \"Job Name: \", submission_result.job.name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5f816cf7-db64-42b6-8143-37e73deb04a2"
+   },
    "source": [
+    "<a name=\"status\"></a>\n",
     "### 4.4 See job status\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
-    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#submit). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "64bf80e0-beeb-41df-960e-20b545c01f8f"
+   },
    "source": [
     "### 4.5 Cancel the job\n",
     "\n",
@@ -380,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "56afe3e2-e456-4ae5-9319-fa46b1a08148"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -389,7 +464,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0eaef4b5-5766-4960-a32a-194ec445a367"
+   },
    "source": [
     "## Summary\n",
     "\n",
@@ -398,7 +475,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "02868eeb-10f7-408d-8615-e1a964037bc2"
+   },
    "source": [
     "## <a name=\"ghtk\"> </a> 5. Work with a microservice of a toolkit\n",
     "\n",
@@ -415,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "80b426dd-2952-45ec-b3be-c6846db92237"
+   },
    "outputs": [],
    "source": [
     "nlp_tk = tkutils.download_toolkit('com.ibm.streamsx.nlp')"
@@ -423,7 +504,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "50e2bd37-6ed8-43ac-bc6c-bee341673fbc"
+   },
    "source": [
     "### 5.2 Select the microservice application\n",
     "\n",
@@ -441,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f6191af1-2e85-4ba9-99ca-88de990dcd42"
+   },
    "outputs": [],
    "source": [
     "nlp_microservice = 'com.ibm.streamsx.nlp.services::UimaService'\n",
@@ -454,7 +539,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "69a4e85c-732a-4b5a-8332-daf3e06b5bfb"
+   },
    "source": [
     "### 5.3. Submit the microservice application\n",
     "\n",
@@ -464,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "8d9d0320-ba2c-4520-b98c-2f56f0a810c6"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -482,7 +571,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "990538c8-03af-452f-b505-6670632f54e3"
+   },
    "source": [
     "### 5.4. Create an application to connect to the microservice\n",
     "\n",
@@ -492,7 +583,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e3678bf1-cd2f-4791-8ac5-6af3799baa44"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -521,7 +614,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5a0c974b-c6d4-41d3-a12e-e00e6024cfbb"
+   },
    "source": [
     "### 5.5. Submit the application\n",
     "\n",
@@ -531,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "064a752c-a43b-4bb3-a132-556346d0a0f8"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -549,18 +646,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "dd011bc0-688b-4f8f-8926-0bb40776c550"
+   },
    "source": [
     "### 5.6 See job status\n",
     "\n",
-    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
-    "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "To view job status and logs, [follow the steps described in section 4.4](#status)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "eeb635bc-771b-4c5f-895a-557813ffd8a4"
+   },
    "source": [
     "### 5.7 Cancel the jobs\n",
     "\n",
@@ -570,7 +669,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "51711854-2a09-4acb-90c9-90b66a60963f"
+   },
    "outputs": [],
    "source": [
     "# cancel the job in the IBM Streams service\n",
@@ -582,7 +683,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "74f83034-9410-47d7-95fd-4b9ccfd1398b"
+   },
    "source": [
     "## Summary\n",
     "\n",
@@ -591,7 +694,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "d9f2c130-9a04-4885-9b99-1c2ba0fa789b"
+   },
    "source": [
     "## <a name=\"splpy\"> </a> 6. Integration of SPL operators\n",
     "\n",
@@ -606,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "38e24590-e6e4-490b-a31f-3d9d94d2f035"
+   },
    "outputs": [],
    "source": [
     "nlp_tk = tkutils.download_toolkit('com.ibm.streamsx.nlp')"
@@ -614,7 +721,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ba96aa3d-5300-46f6-9517-c84ed5ebc23a"
+   },
    "source": [
     "### 6.2 Create sample application using SPL primitive operators"
    ]
@@ -622,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "84257e22-41ac-4d15-abd6-b9cefe5b5381"
+   },
    "outputs": [],
    "source": [
     "topo_spl = Topology(\"WrapSPLOperatorsSample\", namespace=\"sample\")"
@@ -630,7 +741,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ab9ae85a-f418-4c9d-a069-79e440ac84b4"
+   },
    "source": [
     "In this example we are using a `Beacon` as source operator, which produces an infinite stream of tuples with the text *The cow jumps over the moon*.\n",
     "\n",
@@ -646,7 +759,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b686b262-18ec-4ff9-ad0b-df6e33a0bdaf"
+   },
    "outputs": [],
    "source": [
     "import streamsx.spl.op as op\n",
@@ -661,7 +776,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "12d1ca46-6df0-400a-8e0a-0d99846f1489"
+   },
    "source": [
     "Invoke operator (one input stream and one output stream)\n",
     "\n",
@@ -679,7 +796,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "4cfc287c-cd30-4ba2-972d-188cb38e6a46"
+   },
    "outputs": [],
    "source": [
     "from streamsx.spl.types import uint32\n",
@@ -705,7 +824,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7366167f-aa9b-48eb-8865-aecbf91b3e58"
+   },
    "source": [
     "### 6.3 Submit the application\n",
     "\n",
@@ -715,7 +836,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "57b112a7-d71b-4f18-93c4-3a3cde684202"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -733,18 +856,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4183cc8295ad454bbfab510d5ad7d46c"
+   },
    "source": [
-    "### 6.4 See job status\n",
+    "### 6.4 View job status\n",
     "\n",
-    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
-    "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" for the running job.\n"
+    "To view job status and logs, [follow the steps described in section 4.4](#status)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "740b99ad-896c-4352-b1dd-cc8de2ad5770"
+   },
    "source": [
     "### 6.5 Cancel the job\n",
     "\n",
@@ -754,7 +879,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "36322728-1f61-46e3-b757-21ab4facd502"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -763,11 +890,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7990719f-78fc-4c2b-946c-9f506c253233"
+   },
    "source": [
     "## Summary\n",
     "\n",
-    "We used SPL operators with the Python Topology API."
+    "In this notebook, you saw how to use SPL operators with the Python Topology API, find available toolkits, and download toolkits from GitHub.\n",
+    "\n",
+    "\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles)."
    ]
   }
  ],
