--- a/Streams-TimeseriesForecast.ipynb
+++ b/Streams-TimeseriesForecast.ipynb
@@ -23,6 +23,9 @@
     "- invoke an SPL operator\n",
     "\n",
     "Familiarity with [Python](https://www.python.org/about/gettingstarted/) is highly recommended.\n",
+    "\n",
+    "If you are new to the  Streams Python API, [start with this tutorial](https://github.com/IBMStreams/sample.starter_notebooks/blob/latest/Streams-RollingAverageSample.ipynb).\n",
+    "\n",
     "The notebook is divided into following sections, from which _Create the application_ is the most extensive one.\n",
     "\n",
     " 1. [Setup your Streams instance](#setup)\n",
@@ -222,7 +225,7 @@
    "source": [
     "<a name=\"create\"></a>\n",
     "# 2. Create the application\n",
-    "Creating an application means to define schemas, callables, and finally a topology, which is basically a data structure that defines the streaming application. We are going to define the schemas and callables when they are needed to define a stream or transform.\n",
+    "Creating an application means to define schemas, callables, and finally a `Topology`, which is basically a data structure that defines the streaming application. We are going to define the schemas and callables when they are needed to define a stream or transform.\n",
     "\n",
     "## 2.1 Define the schema for the data source\n",
     "The data source creates a stream of tuples with structured data with three attributes: \n"
@@ -642,12 +645,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "d7fedbb9b0ee476d8b9d89640d7896c4"
    },
-   "outputs": [],
    "source": [
     "%matplotlib notebook\n",
     "\n",
@@ -735,11 +736,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learn more\n",
+    "\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "1d7b2c59-447c-4447-9832-3e43e1fed0c4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -760,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
