--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -8,7 +8,8 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "id": "253e360d-7143-4813-b31a-9c7d6d3369b3"
    },
    "source": [
     "# IBM Streams Event Streams sample application\n",
@@ -55,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "4f7319fa-edfe-40fc-9ca8-80ed875c2e30"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -69,7 +72,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3e2a23d5-ab67-4e5d-b987-75091e7f6129"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.kafka` package and verify the package version"
    ]
@@ -77,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "6811feaa-c97a-44a0-a6a1-10faab720458"
+   },
    "outputs": [],
    "source": [
     "import streamsx.kafka as kafka\n",
@@ -88,7 +95,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a42312cb-14d2-4c56-b3e6-14c210cb2bda"
+   },
    "source": [
     "### 1.3 Configure the connection to the IBM Event Streams service\n",
     "\n",
@@ -112,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0a7901c6-7e26-4864-8089-f49796963158"
+   },
    "outputs": [],
    "source": [
     "import getpass\n",
@@ -121,7 +132,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "067cf50d-6e54-4e9b-a141-729f3a34cd78"
+   },
    "source": [
     "Create the Kafka connection configuration and store it in an application configuration in the IBM Streams service. This is the safest way to avoid the credentials being exposed."
    ]
@@ -129,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f3b65313-421c-4d0d-a70d-5dd3cc240253"
+   },
    "outputs": [],
    "source": [
     "# create an application configuration\n",
@@ -151,7 +166,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "30c5eb3e-23d0-45e7-acdd-652f0d3b848b"
+   },
    "source": [
     "In the Event Streams service, create the *topic* where you want to publish the data. You can use the default settings for partitions and retention hours. Enter the topic name before you run the next cell.\n"
    ]
@@ -159,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "6f380d2d-70b0-47b0-a67a-04df23cca153"
+   },
    "outputs": [],
    "source": [
     "topic = \"my_topic\"  ## change this to an existing topic"
@@ -167,7 +186,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "fd5b7023-3e5a-41e3-99d1-75cde013d1bf"
+   },
    "source": [
     "\n",
     "<a id=\"create\"></a>\n",
@@ -181,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "20a06aba-732c-4864-a3d7-d88cf905f94a"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -191,7 +214,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "615f54bb-13b6-4651-8ab2-66f198fcf5f7"
+   },
    "source": [
     "## 2.1 Define sources\n",
     "Your application needs some data to analyze, so the first step is to define a data source that produces the data being processed. \n",
@@ -203,7 +228,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3673cc2a-3bb8-4d95-aaf6-e5e714dd7153"
+   },
    "source": [
     "### 2.1.1 Define a source class\n",
     "\n",
@@ -215,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "81b6ff92-9957-4989-ad97-76fbf92c1da1"
+   },
    "outputs": [],
    "source": [
     "import random \n",
@@ -243,7 +272,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "9894c218-8378-40d9-875a-aee5c1e64807"
+   },
    "source": [
     "### 2.1.2  Create the `Stream `\n",
     "\n",
@@ -253,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "af56fce1-2f92-405c-9a20-4d3a0ab77ba8"
+   },
    "outputs": [],
    "source": [
     "# create a stream from the data using Topology.source\n",
@@ -262,7 +295,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "42db3590-f268-4f32-a826-5b46a1b2ebc9"
+   },
    "source": [
     "## 2.2 Publish the tuples in the Event Streams service\n",
     "\n",
@@ -272,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "1d61c4be-8094-40e8-a0dd-182b876033a9"
+   },
    "outputs": [],
    "source": [
     "from streamsx.kafka import KafkaProducer\n",
@@ -282,7 +319,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "e027a553-f2c7-470b-acd9-1620215c07e7"
+   },
    "source": [
     "**Summary:**\n",
     "\n",
@@ -293,7 +332,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a54cb7ee-5493-4715-acd3-a76ee9d7dd8e"
+   },
    "source": [
     "## 2.3 Subscribe to the Event Streams topic and consume the data\n",
     "\n",
@@ -303,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "256b49be-ca41-4a6f-a88a-08ebfd5de5ad"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.schema import CommonSchema\n",
@@ -318,7 +361,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "05cdc2dd-4347-4f50-8367-990554f5cc78"
+   },
    "source": [
     "## 2.4 Analyze the data\n",
     "\n",
@@ -330,7 +375,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "dcf8d968-9d79-4e38-816d-f4d1b7a992d6"
+   },
    "source": [
     "### 2.2.1 Filter data from the  `Stream`  \n",
     "\n",
@@ -340,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "69d66f1f-4cc8-4ef7-bbf6-b31d7d6fec6c"
+   },
    "outputs": [],
    "source": [
     "# in this example, pass through only sensor data from sensor with ID \"sensor_3\"\n",
@@ -354,7 +403,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "73871daf-9746-4a92-a937-dc33e3c40eff"
+   },
    "source": [
     "# 2.3 Create a `View` to preview the tuples on the `Stream` \n",
     "\n",
@@ -365,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "906b345c-e08c-4b01-9379-2a7d9f92f0f1"
+   },
    "outputs": [],
    "source": [
     "sensor3_view = sensordata_id3.view(name=\"Sensor3\",\n",
@@ -374,7 +427,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c5d34b45-78d5-4aab-998a-3c082997e666"
+   },
    "source": [
     "# 2.4 Define output\n",
     "\n",
@@ -388,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0a677e86-64ca-4dcf-bf0e-ee97ac6be147"
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -404,7 +461,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "abfc3588-d579-49a0-84b5-aeeeb753841e"
+   },
    "source": [
     "<a name=\"launch\"></a>\n",
     "\n",
@@ -416,6 +475,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "1e56dc03-a84d-4dc7-a44c-c8e8bffed564",
     "scrolled": true
    },
    "outputs": [],
@@ -435,7 +495,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "35df5237-6bb7-4501-94cd-97233d6d2b78"
+   },
    "source": [
     "<a name=\"view\"></a>\n",
     "\n",
@@ -446,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "594a9edb-783f-49a2-b93a-38c205911b7f"
+   },
    "outputs": [],
    "source": [
     "# connect to the view and display the data\n",
@@ -460,7 +524,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ce6e8dbe-a02c-4845-9219-85fed977f47e"
+   },
    "source": [
     "## 4.1 Display the results in real time\n",
     "Calling `View.display()` from the notebook displays the results of the view in a table that is updated in real-time."
@@ -469,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f4642b4f-3ee2-4230-8a9c-a8e944df1537"
+   },
    "outputs": [],
    "source": [
     "# display the results for 30 seconds\n",
@@ -478,15 +546,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4015ba5a-7ca8-49b5-b0f9-5d4a795c9d24"
+   },
    "source": [
     "\n",
     "## 4.2 See job status \n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
-    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the name printed above.\n",
-    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n",
     "\n",
     "\n",
     "<a name=\"cancel\"></a>\n",
@@ -499,7 +574,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "9f68c9ae-a747-49a3-acaf-769c018f2d36"
+   },
    "outputs": [],
    "source": [
     "# stop the view's background data fetch in case the 30 seconds display duration are not yet over\n",
@@ -511,7 +588,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3bf5bb00-61e9-4bea-aed3-0f8bd8816c7f"
+   },
    "source": [
     "# Summary\n",
     "\n",
@@ -519,7 +598,11 @@
     "\n",
     "After submitting the application to the IBM Streams service, we connected to the `sensor3_view` view to see the data of sensor 3 within the notebook.\n",
     "\n",
-    "You may have noticed that the application consists of two independent parts: One part generates the data and publishes the them to the Event Streams cloud service. The other part consumes from Event Streams, filters, and publishes the stream within the IBM Streams instance. These two parts can also be declared by using different topologies, and can be submitted as separate jobs."
+    "You may have noticed that the application consists of two independent parts: One part generates the data and publishes the them to the Event Streams cloud service. The other part consumes from Event Streams, filters, and publishes the stream within the IBM Streams instance. These two parts can also be declared by using different topologies, and can be submitted as separate jobs.\n",
+    "\n",
+    "##  Next steps\n",
+    "\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles)."
    ]
   }
  ],
