--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -8,7 +8,6 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "id": "4527aa95-6b29-402c-a521-428958869bb2"
    },
    "source": [
@@ -99,7 +98,7 @@
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
     "\n",
-    "streams_instance_name =  ## Change this to Streams instance\n",
+    "streams_instance_name =  \"tooling-55-cpd\"## Change this to Streams instance\n",
     "\n",
     "try:\n",
     "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
@@ -589,7 +588,7 @@
     "if submission_result.job:\n",
     "    streams_job = submission_result.job\n",
     "    print (\"JobId: \", streams_job.id )\n",
-    "    print (\"Job name: %s-%s\\n\\nRun name: %s\" % (topo.namespace, topo.name, streams_job.name))\n",
+    "    print (\"Job name: %s\" % (streams_job.name))\n",
     "\n",
     "else:\n",
     "    print(\"Submission failed: \"   + str(submission_result))"
@@ -657,16 +656,16 @@
     "\n",
     "##  4.2 See application status\n",
     "\n",
-    "The tools available to monitor the running application, download logs, and see job status depend on the version of Streams and your development environment.\n",
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
     "\n",
     "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
     "\n",
     "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
-    "    1. Find your job based on the `Job Name` printed above. This will list all of the job runs.\n",
-    "    1. Click the **Run name** that matches the run name [printed in section 3](#launch) when you submitted the job.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed in section 3](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
     "\n",
-    "\n",
-    "- **For all other development environments and versions of Streams**, this page has [more information on how to monitor a Streams application](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
    ]
   },
   {
@@ -729,12 +728,12 @@
     "\n",
     "Use the links below to learn more.\n",
     "\n",
-    " - See the documentation for more output options\n",
+    " - See the documentation for more output options:\n",
     "\n",
     "    - Print the contents of a `Stream`: [`Stream.print()`](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.topology.html#streamsx.topology.topology.Stream.print),\n",
     "    - Enable a microservices based architecture: [`Stream.publish`](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.topology.html#streamsx.topology.topology.Stream.publish). Other Streams applications can connect to the published `Stream`.\n",
     "    - Send the stream to another database or system, using [`Stream.for_each`](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.topology.html#streamsx.topology.topology.Stream.for_each).\n",
-    "    - Create a REST service for the Streams application with the [`EndpointSink` class](https://streamsxtopology.readthedocs.io/en/stable/streamsx.service.html#streamsx.service.EndpointSink).(Cloud Pak for Data v3.5+ only) \n",
+    "    - Create a REST service for the Streams application with the [`EndpointSink` class](https://streamsxtopology.readthedocs.io/en/stable/streamsx.service.html#streamsx.service.EndpointSink)(Cloud Pak for Data v3.5+ only).\n",
     "\n",
     "- **Find more samples**: This notebook is one of several sample notebooks available in the [starter notebooks repository on GitHub](https://github.com/IBMStreams/sample.starter_notebooks). Visit the repository for examples of how to connect to common data sources, including Apache Kafka, IBM, and Db2 Warehouse. \n",
     "\n",
@@ -763,5 +762,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
