--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -499,10 +499,17 @@
     "\n",
     "## 4.1 See job status \n",
     "\n",
-    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the id printed above.\n",
-    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "The tools available to monitor the running application depend on the version of Streams and your development environment.\n",
+    "\n",
+    "- **If you are using a Cloud Pak for Data 3.5 project:**  When you submit the `Topology`, you create a new <i>job run</i>. The job represents the application and the job run represents a single instance of the running application. \n",
+    "\n",
+    "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
+    "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#launch). This will list all of the job runs for that job.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    \n",
+    "\n",
+    "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n"
    ]
   },
   {
@@ -539,7 +546,10 @@
     "\n",
     "We started with a `Stream` called `pulse`, which contained the data we wanted to insert. Next, we used the `pulse` stream as input for the \"Event Store Writer\" to insert rows in the specified table.  \n",
     "\n",
-    "After submitting the application to the Streams service, we connected to the instance via REST and displayed the \"Event Store Writer\" metrics to see the progress within the notebook."
+    "After submitting the application to the Streams service, we connected to the instance via REST and displayed the \"Event Store Writer\" metrics to see the progress within the notebook.\n",
+    "\n",
+    "\n",
+    "Learn more about the [Python API from the documentation](https://streamsxtopology.readthedocs.io/en/stable/index.html/). You can also visit the [Streams community for more resources](https://ibm.biz/streams-articles)."
    ]
   }
  ],
